[package]
name = "elevenlabs_ttv"
version = "0.0.1"
edition = "2024"
description = "Type-safe Rust client for ElevenLabs Text-to-Voice API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamzaelmarjani/elevenlabs_ttv"
keywords = [
    "elevenlabs",
    "elevenlabs_ttv",
    "elevenlabs_api",
    "elevenlabs_rs",
    "text-to-voice",
]
categories = ["api-bindings", "multimedia::audio", "network-programming"]

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
chrono = "0.4.41"

[dev-dependencies]
tokio-test = "0.4.4"

[[example]]
name = "basic_ttv"
required-features = []

[[example]]
name = "advanced_ttv"
required-features = []
